                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 14-06-2005 fixed: possible crash in zip file handler.
 - 14-06-2005 changed: weather pictures now in weather.zip (currently disabled).
 - 14-06-2005 added: rar support. since it has to extract the files to disc, it is currently only available for: 
		- .cbr/.rar in my pictures. 
		- compressed (vob)subs (supports a rar within a rar etc)
		- my music.
 - 13-06-2005 changed: fat-x limit setting also affects filemanager.
 - 13-06-2005 fixed: cosmetic problem introduced by previous commit.
 - 13-06-2005 added: ability to select rss feeds update interval.
 - 13-06-2005 fixed: the option to enable autosync in mplayer (smooth audio clock) wasn't taking affect
 - 12-06-2005 added: readstring method to zip file class.
 - 12-06-2005 fixed: seeking after selecting time using seekbar was very slow
 - 12-06-2005 changed: HttpApi: re-enabled database lookup
 - 11-06-2005 updated: mplayer.dll - about 1 meg smaller than old (saves mem).
                       has been compiled with gcc.3.4.4 and has some unneeded filters removed
 - 11-06-2005 fixed: HttpApi internal logic bug
 - 10-06-2005 added: Master Code Control: XBMC Startup Lock! [GeminiServer]
		     XBMC Startup Lock will use the Master Lock Settings and if Startup Lock is enabled:
		     On XBMC Startup, the XBMC Startup Lock will ask you the predefined Master Code in 
		     addition with the Max Retry. If you enter the correct MasterCode, XBMC will start as used
		     But if you enter the Wrong Master Code in addition with the Max Retry:
		     Then XBMC switches off! if you restart XBMC it will ask the Master Code again!